--- a/config/meta.yml
+++ b/config/meta.yml
@@ -2,4 +2,5 @@ meta_product_name: "Funder"
 meta_title: "Funder - your funding finder"
 meta_description: "Funder helps higher-education students and researchers find a scholarship or funding program to pursue their studies and researches."
 meta_image: "banner_w1200_h630.jpg"
+meta_type: "website"
 meta_url: "funder-app.site"
